SDPA-1497: Removed title and body fields from Hero Banner paragraph.

--- a/config/install/core.entity_form_display.node.landing_page.default.yml
+++ b/config/install/core.entity_form_display.node.landing_page.default.yml
@@ -22,7 +22,10 @@ dependencies:
     - field.field.node.landing_page.field_landing_page_show_contact
     - field.field.node.landing_page.field_landing_page_summary
     - field.field.node.landing_page.field_metatags
+    - field.field.node.landing_page.field_node_primary_site
+    - field.field.node.landing_page.field_node_site
     - field.field.node.landing_page.field_related_links
+    - field.field.node.landing_page.field_show_content_rating
     - field.field.node.landing_page.field_show_news_search
     - field.field.node.landing_page.field_show_related_content
     - field.field.node.landing_page.field_show_site_section_nav
@@ -39,7 +42,6 @@ dependencies:
   module:
     - content_moderation
     - entity_browser
-    - entity_reference_revisions
     - field_group
     - inline_entity_form
     - maxlength
@@ -85,7 +87,6 @@ third_party_settings:
       children:
         - title
         - field_featured_image
-        - field_landing_page_hero_banner
         - field_landing_page_hero_image
         - field_landing_page_hero_logo
         - field_graphical_image
@@ -93,6 +94,7 @@ third_party_settings:
         - field_landing_page_hero_theme
         - field_landing_page_intro_text
         - field_landing_page_summary
+        - field_landing_page_hero_banner
         - field_landing_page_key_journeys
       parent_name: group_content
       weight: 1
@@ -110,7 +112,7 @@ third_party_settings:
       children:
         - field_landing_page_c_primary
       parent_name: group_content
-      weight: 3
+      weight: 4
       format_type: tab
       format_settings:
         label: 'Primary Campaign'
@@ -126,7 +128,7 @@ third_party_settings:
         - field_show_table_of_content
         - field_landing_page_component
       parent_name: group_content
-      weight: 4
+      weight: 5
       format_type: tab
       format_settings:
         label: 'Body Content'
@@ -141,7 +143,7 @@ third_party_settings:
       children:
         - field_landing_page_c_secondary
       parent_name: group_content
-      weight: 5
+      weight: 6
       format_type: tab
       format_settings:
         label: 'Secondary Campaign'
@@ -232,7 +234,7 @@ third_party_settings:
       children:
         - field_landing_page_header
       parent_name: group_content
-      weight: 2
+      weight: 3
       format_type: tab
       format_settings:
         label: 'Header Content'
@@ -257,7 +259,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_bottom_graphical_image:
-    weight: 6
+    weight: 5
     settings:
       entity_browser: tide_image_browser
       field_widget_display: rendered_entity
@@ -287,7 +289,7 @@ content:
     type: entity_browser_entity_reference
     region: content
   field_graphical_image:
-    weight: 5
+    weight: 4
     settings:
       entity_browser: tide_image_browser
       field_widget_display: rendered_entity
@@ -375,7 +377,7 @@ content:
     region: content
   field_landing_page_hero_banner:
     type: entity_reference_paragraphs
-    weight: 2
+    weight: 9
     settings:
       title: 'Hero Banner'
       title_plural: 'Hero Banners'
@@ -386,7 +388,7 @@ content:
     third_party_settings: {  }
     region: content
   field_landing_page_hero_image:
-    weight: 3
+    weight: 2
     settings:
       entity_browser: tide_image_browser
       field_widget_display: rendered_entity
@@ -401,7 +403,7 @@ content:
     type: entity_browser_entity_reference
     region: content
   field_landing_page_hero_logo:
-    weight: 4
+    weight: 3
     settings:
       entity_browser: tide_image_browser
       field_widget_display: rendered_entity
@@ -416,13 +418,13 @@ content:
     type: entity_browser_entity_reference
     region: content
   field_landing_page_hero_theme:
-    weight: 7
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_landing_page_intro_text:
-    weight: 8
+    weight: 7
     settings:
       rows: 5
       placeholder: ''
@@ -457,7 +459,7 @@ content:
     type: boolean_checkbox
     region: content
   field_landing_page_summary:
-    weight: 9
+    weight: 8
     settings:
       rows: 5
       placeholder: ''
