--- a/config/install/core.entity_view_display.node.landing_page.featured_card.yml
+++ b/config/install/core.entity_view_display.node.landing_page.featured_card.yml
@@ -13,7 +13,10 @@ dependencies:
     - field.field.node.landing_page.field_landing_page_show_contact
     - field.field.node.landing_page.field_landing_page_summary
     - field.field.node.landing_page.field_metatags
+    - field.field.node.landing_page.field_node_primary_site
+    - field.field.node.landing_page.field_node_site
     - field.field.node.landing_page.field_related_links
+    - field.field.node.landing_page.field_show_content_rating
     - field.field.node.landing_page.field_show_related_content
     - field.field.node.landing_page.field_show_social_sharing
     - field.field.node.landing_page.field_show_whats_next
@@ -24,6 +27,8 @@ dependencies:
   module:
     - smart_trim
     - user
+_core:
+  default_config_hash: DGDXRv6V8FsXm_AvsRUX9oOM272wOAuYO9BNtv3XF_s
 id: node.landing_page.featured_card
 targetEntityType: node
 bundle: landing_page
@@ -62,6 +67,8 @@ hidden:
   field_landing_page_c_secondary: true
   field_landing_page_component: true
   field_landing_page_contact: true
+  field_landing_page_header: true
+  field_landing_page_hero_banner: true
   field_landing_page_hero_image: true
   field_landing_page_hero_logo: true
   field_landing_page_hero_theme: true
@@ -70,6 +77,8 @@ hidden:
   field_landing_page_nav_title: true
   field_landing_page_show_contact: true
   field_metatags: true
+  field_node_primary_site: true
+  field_node_site: true
   field_related_links: true
   field_show_content_rating: true
   field_show_news_search: true
