--- a/config/install/core.entity_form_display.block_content.campaign_with_video.default.yml
+++ b/config/install/core.entity_form_display.block_content.campaign_with_video.default.yml
@@ -1,43 +1,57 @@
+uuid: 1fbd3a16-cea7-484f-9c18-36e3919c546f
 langcode: en
 status: true
 dependencies:
   config:
-    - block_content.type.campaign
+    - block_content.type.campaign_with_video
     - entity_browser.browser.tide_image_browser
-    - field.field.block_content.campaign.body
-    - field.field.block_content.campaign.field_block_cta
-    - field.field.block_content.campaign.field_block_image
-    - field.field.block_content.campaign.field_block_title
+    - field.field.block_content.campaign_with_video.body
+    - field.field.block_content.campaign_with_video.field_block_cta
+    - field.field.block_content.campaign_with_video.field_block_embedded_video
+    - field.field.block_content.campaign_with_video.field_block_image
+    - field.field.block_content.campaign_with_video.field_block_title
   module:
     - entity_browser
     - link
     - text
-id: block_content.campaign.default
+id: block_content.campaign_with_video.default
 targetEntityType: block_content
-bundle: campaign
+bundle: campaign_with_video
 mode: default
 content:
   body:
     type: text_textarea_with_summary
     weight: 2
-    region: content
     settings:
       rows: 9
       summary_rows: 3
       placeholder: ''
     third_party_settings: {  }
-  field_block_cta:
-    type: link_default
-    weight: 4
     region: content
+  field_block_cta:
+    weight: 5
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
-  field_block_image:
-    type: entity_browser_entity_reference
-    weight: 3
+    type: link_default
     region: content
+  field_block_embedded_video:
+    weight: 4
+    settings:
+      entity_browser: tide_embedded_video_browser
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_replace: false
+      open: false
+      field_widget_display_settings: {  }
+    third_party_settings: {  }
+    type: entity_browser_entity_reference
+    region: content
+  field_block_image:
+    weight: 3
     settings:
       entity_browser: tide_image_browser
       field_widget_display: rendered_entity
@@ -46,17 +60,19 @@ content:
       selection_mode: selection_append
       field_widget_display_settings:
         view_mode: default
-      open: false
       field_widget_replace: false
+      open: false
     third_party_settings: {  }
-  field_block_title:
-    type: string_textfield
-    weight: 1
+    type: entity_browser_entity_reference
     region: content
+  field_block_title:
+    weight: 1
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   info:
     type: string_textfield
     weight: 0
