--- a/config/install/core.entity_view_display.node.landing_page.card.yml
+++ b/config/install/core.entity_view_display.node.landing_page.card.yml
@@ -74,7 +74,7 @@ hidden:
   field_metatags: true
   field_related_links: true
   field_show_content_rating: true
-  field_show_news_search: true
+  field_show_related_content: true
   field_show_site_section_nav: true
   field_show_social_sharing: true
   field_show_table_of_content: true
