--- a/config/install/core.entity_view_display.node.landing_page.featured_card.yml
+++ b/config/install/core.entity_view_display.node.landing_page.featured_card.yml
@@ -73,7 +73,7 @@ hidden:
   field_landing_page_show_contact: true
   field_metatags: true
   field_related_links: true
-  field_show_news_search: true
+  field_show_content_rating: true
   field_show_related_content: true
   field_show_site_section_nav: true
   field_show_social_sharing: true
