--- a/config/install/field.field.node.landing_page.field_landing_page_hero_banner.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_hero_banner.yml
@@ -4,7 +4,7 @@ dependencies:
   config:
     - field.storage.node.field_landing_page_hero_banner
     - node.type.landing_page
-    - paragraphs.paragraphs_type.hero_banner
+    - paragraphs.paragraphs_type.hero_banner_cta
   module:
     - entity_reference_revisions
 id: node.landing_page.field_landing_page_hero_banner
