--- a/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--hero_banner_with_cta.yml
+++ b/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--hero_banner_with_cta.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - paragraphs.paragraphs_type.hero_banner
+    - paragraphs.paragraphs_type.hero_banner_cta
 id: paragraph--hero_banner
 disabled: false
 path: paragraph/hero_banner
