--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -52,7 +52,7 @@ config_devel:
     - core.entity_form_display.paragraph.media_gallery.default
     - core.entity_form_display.paragraph.embedded_webform.default
     - core.entity_form_display.paragraph.featured_news.default
-    - core.entity_form_display.paragraph.hero_banner.default
+    - core.entity_form_display.paragraph.hero_banner_with_cta.default
     - core.entity_form_display.paragraph.introduction_banner.default
     - core.entity_view_display.block_content.media_gallery.default
     - core.entity_view_display.node.landing_page.card
@@ -80,7 +80,7 @@ config_devel:
     - core.entity_view_display.paragraph.embedded_webform.default
     - core.entity_view_display.paragraph.embedded_webform.preview
     - core.entity_view_display.paragraph.featured_news.default
-    - core.entity_view_display.paragraph.hero_banner.default
+    - core.entity_view_display.paragraph.hero_banner_with_cta.default
     - core.entity_view_display.paragraph.introduction_banner.default
     - core.entity_view_display.paragraph.keydates.default
     - core.entity_view_display.paragraph.key_journeys.default
@@ -168,10 +168,10 @@ config_devel:
     - field.field.paragraph.card_promotion_auto.field_paragraph_reference
     - field.field.paragraph.card_promotion_auto.field_paragraph_cta_text
     - field.field.paragraph.embedded_search_form.field_paragraph_search_block
-    - field.field.paragraph.hero_banner.field_paragraph_background_image
-    - field.field.paragraph.hero_banner.field_paragraph_cta
-    - field.field.paragraph.hero_banner.field_paragraph_freetext
-    - field.field.paragraph.hero_banner.field_paragraph_link_text
+    - field.field.paragraph.hero_banner_with_cta.field_paragraph_background_image
+    - field.field.paragraph.hero_banner_with_cta.field_paragraph_cta
+    - field.field.paragraph.hero_banner_with_cta.field_paragraph_freetext
+    - field.field.paragraph.hero_banner_with_cta.field_paragraph_link_text
     - field.field.paragraph.introduction_banner.field_paragraph_links
     - field.field.paragraph.introduction_banner.field_paragraph_summary
     - field.field.paragraph.introduction_banner.field_paragraph_title
@@ -268,7 +268,7 @@ config_devel:
     - paragraphs.paragraphs_type.card_promotion_auto
     - paragraphs.paragraphs_type.embedded_search_form
     - paragraphs.paragraphs_type.embedded_webform
-    - paragraphs.paragraphs_type.hero_banner
+    - paragraphs.paragraphs_type.hero_banner_with_cta
     - paragraphs.paragraphs_type.introduction_banner
     - paragraphs.paragraphs_type.key_journeys
     - paragraphs.paragraphs_type.keydates
@@ -293,7 +293,7 @@ config_devel:
     - jsonapi_extras.jsonapi_resource_config.paragraph--card_navigation_featured
     - jsonapi_extras.jsonapi_resource_config.paragraph--card_promotion
     - jsonapi_extras.jsonapi_resource_config.paragraph--featured_news
-    - jsonapi_extras.jsonapi_resource_config.paragraph--hero_banner
+    - jsonapi_extras.jsonapi_resource_config.paragraph-.hero_banner_with_cta
     - jsonapi_extras.jsonapi_resource_config.paragraph--introduction_banner
     - jsonapi_extras.jsonapi_resource_config.paragraph--key_journeys
     - jsonapi_extras.jsonapi_resource_config.paragraph--keydates
