--- a/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--hero_banner_with_cta.yml
+++ b/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--hero_banner_with_cta.yml
@@ -3,10 +3,10 @@ status: true
 dependencies:
   config:
     - paragraphs.paragraphs_type.hero_banner_cta
-id: paragraph--hero_banner
+id: paragraph--hero_banner_with_cta
 disabled: false
 path: paragraph/hero_banner
-resourceType: paragraph--hero_banner
+resourceType: paragraph--hero_banner_with_cta
 resourceFields:
   id:
     fieldName: id
