--- a/config/install/core.entity_form_display.paragraph.hero_banner_with_cta.default.yml
+++ b/config/install/core.entity_form_display.paragraph.hero_banner_with_cta.default.yml
@@ -7,7 +7,7 @@ dependencies:
     - field.field.paragraph.hero_banner_with_cta.field_paragraph_cta
     - field.field.paragraph.hero_banner_with_cta.field_paragraph_freetext
     - field.field.paragraph.hero_banner_with_cta.field_paragraph_link_text
-    - paragraphs.paragraphs_type.hero_banner_cta
+    - paragraphs.paragraphs_type.hero_banner_with_cta
   module:
     - entity_browser
     - link
