--- a/config/install/field.field.paragraph.hero_banner_with_cta.field_paragraph_background_image.yml
+++ b/config/install/field.field.paragraph.hero_banner_with_cta.field_paragraph_background_image.yml
@@ -4,7 +4,7 @@ dependencies:
   config:
     - field.storage.paragraph.field_paragraph_background_image
     - media.type.image
-    - paragraphs.paragraphs_type.hero_banner_cta
+    - paragraphs.paragraphs_type.hero_banner_with_cta
 id: paragraph.hero_banner_with_cta.field_paragraph_background_image
 field_name: field_paragraph_background_image
 entity_type: paragraph
