--- a/config/install/field.field.paragraph.hero_banner_with_cta.field_paragraph_freetext.yml
+++ b/config/install/field.field.paragraph.hero_banner_with_cta.field_paragraph_freetext.yml
@@ -3,7 +3,7 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_paragraph_freetext
-    - paragraphs.paragraphs_type.hero_banner_cta
+    - paragraphs.paragraphs_type.hero_banner_with_cta
 id: paragraph.hero_banner_with_cta.field_paragraph_freetext
 field_name: field_paragraph_freetext
 entity_type: paragraph
