--- a/config/install/field.field.paragraph.hero_banner_with_cta.field_paragraph_link_text.yml
+++ b/config/install/field.field.paragraph.hero_banner_with_cta.field_paragraph_link_text.yml
@@ -3,7 +3,7 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_paragraph_link_text
-    - paragraphs.paragraphs_type.hero_banner_cta
+    - paragraphs.paragraphs_type.hero_banner_with_cta
   module:
     - link
 id: paragraph.hero_banner_with_cta.field_paragraph_link_text
