--- a/config/install/field.field.node.landing_page.field_landing_page_hero_banner.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_hero_banner.yml
@@ -22,9 +22,9 @@ settings:
   handler_settings:
     negate: 0
     target_bundles:
-      hero_banner: hero_banner
+      hero_banner_with_cta: hero_banner_with_cta
     target_bundles_drag_drop:
-      hero_banner:
+      hero_banner_with_cta:
         enabled: true
         weight: 35
       accordion:
