--- a/config/install/paragraphs.paragraphs_type.hero_banner_with_cta.yml
+++ b/config/install/paragraphs.paragraphs_type.hero_banner_with_cta.yml
@@ -1,7 +1,7 @@
 langcode: en
 status: true
 dependencies: {  }
-id: hero_banner
+id: hero_banner_with_cta
 label: 'Hero Banner with CTA'
 icon_uuid: null
 description: 'A call to action hero banner to provoke an immediate response from the citizen.'
