--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "dpc-sdp/tide_event": "dev-ci",
         "dpc-sdp/tide_media": "dev-ci",
         "drupal/paragraphs": "1.5",
-        "drupal/maxlength": "1.0@beta2",
+        "drupal/maxlength": "1.0-beta2",
         "drupal/smart_trim": "1.1"
     },
     "suggest": {
