--- a/config/install/block_content.type.campaign.yml
+++ b/config/install/block_content.type.campaign.yml
@@ -4,4 +4,4 @@ dependencies: {  }
 id: campaign
 label: Campaign
 revision: 1
-description: 'Block type used for Primary Campaigns on landing pages.'
+description: 'Block type used for Campaigns on landing pages.'
