--- a/config/install/block_content.type.campaign_with_video.yml
+++ b/config/install/block_content.type.campaign_with_video.yml
@@ -5,4 +5,4 @@ dependencies: {  }
 id: campaign_with_video
 label: 'Campaign with video'
 revision: 1
-description: 'Block type used for Secondary Campaigns on landing pages.'
+description: 'Block type used for Campaigns on landing pages.'
