--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,14 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "dev-ci",
-        "dpc-sdp/tide_event": "dev-ci",
-        "dpc-sdp/tide_media": "dev-ci",
-        "drupal/paragraphs": "1.5",
-        "drupal/maxlength": "1.0-beta2",
-        "drupal/smart_trim": "1.1"
+        "dpc-sdp/tide_core": "^1.0",
+        "dpc-sdp/tide_event": "^1.0",
+        "dpc-sdp/tide_media": "^1.0"
     },
     "suggest": {
-        "dpc-sdp/tide_api:dev-ci": "Allows to use Drupal in headless mode",
-        "dpc-sdp/tide_webform:dev-ci": "Allows to use questionnaires",
-        "dpc-sdp/tide_news:dev-ci": "News content type and related configuration for Tide Drupal 8 distribution"
+        "dpc-sdp/tide_api:^1.0": "Allows to use Drupal in headless mode",
+        "dpc-sdp/tide_webform:^1.0": "Allows to use questionnaires",
+        "dpc-sdp/tide_news:^1.0": "News content type and related configuration for Tide Drupal 8 distribution"
     },
     "repositories": {
         "drupal": {
