--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "^1.0",
-        "dpc-sdp/tide_event": "^1.0",
-        "dpc-sdp/tide_media": "^1.0"
+        "dpc-sdp/tide_core": "dev-feature/SDPA-309-Vocabulary-License-Type-Independent-Sites",
+        "dpc-sdp/tide_event": "dev-feature/SDPA-1765_overwrite-configuration",
+        "dpc-sdp/tide_media": "dev-feature/SDPA-1765_overwrite-configuration"
     },
     "suggest": {
         "dpc-sdp/tide_api:^1.0": "Allows to use Drupal in headless mode",
