--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "dpc-sdp/tide_core": "^1.0",
         "dpc-sdp/tide_event": "^1.0",
-        "dpc-sdp/tide_media": "^1.0"
+        "dpc-sdp/tide_media": "^1.0",
+        "drupal/metatag": "~1.7.0"
     },
     "suggest": {
         "dpc-sdp/tide_api:^1.0": "Allows to use Drupal in headless mode",
