--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "dev-feature/SDPA-1617-force-metatag-module-version as 1.0",
+        "dpc-sdp/tide_core": "^1.0",
         "dpc-sdp/tide_event": "^1.0",
         "dpc-sdp/tide_media": "^1.0"
     },
