SDPA-1225-Summary-field-ristricted-to-200-characters

--- a/config/install/core.entity_form_display.paragraph.card_event.default.yml
+++ b/config/install/core.entity_form_display.paragraph.card_event.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - datetime_range
     - entity_browser
     - link
+    - maxlength
 id: paragraph.card_event.default
 targetEntityType: paragraph
 bundle: card_event
@@ -37,8 +38,7 @@ content:
     region: content
   field_paragraph_location:
     weight: 4
-    settings:
-      default_country: null
+    settings: {  }
     third_party_settings: {  }
     type: address_default
     region: content
@@ -61,9 +61,14 @@ content:
     type: string_textarea
     weight: 5
     settings:
-      placeholder: ''
       rows: 5
-    third_party_settings: {  }
+      placeholder: ''
+    third_party_settings:
+      maxlength:
+        maxlength_js: 200
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: false
+        maxlength_js_truncate_html: false
     region: content
   field_paragraph_title:
     weight: 0
