--- a/config/install/core.entity_view_display.paragraph.complex_image.default.yml
+++ b/config/install/core.entity_view_display.paragraph.complex_image.default.yml
@@ -2,7 +2,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.complex_image.field_complex_image_caption
     - field.field.paragraph.complex_image.field_complex_image_data
     - field.field.paragraph.complex_image.field_complex_image_dl_label
     - field.field.paragraph.complex_image.field_complex_image_full_label
@@ -17,13 +16,6 @@ targetEntityType: paragraph
 bundle: complex_image
 mode: default
 content:
-  field_complex_image_caption:
-    weight: 2
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: basic_string
-    region: content
   field_complex_image_data:
     weight: 4
     label: above
@@ -31,8 +23,16 @@ content:
     third_party_settings: {  }
     type: text_default
     region: content
-  field_complex_image_dl_label:
+  field_complex_image_data_label:
     weight: 6
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_complex_image_dl_label:
+    weight: 7
     label: above
     settings:
       link_to_entity: false
