Fixed missing disabled property in JSON:API Resource config of Card Event.
On-behalf-of: @salsadigitalauorg <sonny@salsadigital.com.au>

--- a/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--card_event.yml
+++ b/config/optional/jsonapi_extras.jsonapi_resource_config.paragraph--card_event.yml
@@ -169,6 +169,7 @@ resourceFields:
       id: date_time_from_string
       settings:
         dateTimeFormat: 'Y-m-d\TH:i:sP'
+    disabled: false
   field_paragraph_location:
     fieldName: field_paragraph_location
     publicName: field_paragraph_location
