--- a/config/install/core.entity_form_display.node.landing_page.default.yml
+++ b/config/install/core.entity_form_display.node.landing_page.default.yml
@@ -23,6 +23,8 @@ dependencies:
     - field.field.node.landing_page.field_landing_page_summary
     - field.field.node.landing_page.field_metatags
     - field.field.node.landing_page.field_related_links
+    - field.field.node.landing_page.field_show_ack_of_country
+    - field.field.node.landing_page.field_show_content_rating
     - field.field.node.landing_page.field_show_related_content
     - field.field.node.landing_page.field_show_site_section_nav
     - field.field.node.landing_page.field_show_social_sharing
@@ -57,7 +59,6 @@ third_party_settings:
       weight: 0
       format_type: tabs
       format_settings:
-        label: 'Section 1'
         direction: horizontal
         id: ''
         classes: ''
@@ -96,7 +97,6 @@ third_party_settings:
       weight: 1
       format_type: tab
       format_settings:
-        label: 'Page Header'
         formatter: closed
         description: ''
         required_fields: true
@@ -111,7 +111,6 @@ third_party_settings:
       weight: 4
       format_type: tab
       format_settings:
-        label: 'Primary Campaign'
         formatter: closed
         description: ''
         required_fields: true
@@ -127,7 +126,6 @@ third_party_settings:
       weight: 5
       format_type: tab
       format_settings:
-        label: 'Body Content'
         formatter: closed
         description: ''
         required_fields: true
@@ -142,7 +140,6 @@ third_party_settings:
       weight: 6
       format_type: tab
       format_settings:
-        label: 'Secondary Campaign'
         formatter: closed
         description: ''
         required_fields: true
@@ -157,7 +154,6 @@ third_party_settings:
       weight: 30
       format_type: tab
       format_settings:
-        label: 'Social sharing'
         formatter: closed
         description: ''
         required_fields: true
@@ -188,7 +184,6 @@ third_party_settings:
       weight: 27
       format_type: tab
       format_settings:
-        label: 'What''s Next'
         formatter: closed
         description: ''
         required_fields: true
@@ -229,11 +224,11 @@ third_party_settings:
     group_header_content:
       children:
         - field_landing_page_header
+        - field_show_ack_of_country
       parent_name: group_content
       weight: 3
       format_type: tab
       format_settings:
-        label: 'Header Content'
         formatter: closed
         description: ''
         required_fields: true
@@ -250,7 +245,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -373,7 +368,7 @@ content:
     region: content
   field_landing_page_hero_banner:
     type: entity_reference_paragraphs
-    weight: 9
+    weight: 10
     settings:
       title: 'Hero Banner with CTA'
       title_plural: 'Hero Banners with CTA'
@@ -429,7 +424,7 @@ content:
     region: content
   field_landing_page_key_journeys:
     type: entity_reference_paragraphs
-    weight: 10
+    weight: 11
     settings:
       title: 'Key journey'
       title_plural: 'Key journeys'
@@ -455,7 +450,7 @@ content:
     type: boolean_checkbox
     region: content
   field_landing_page_summary:
-    weight: 8
+    weight: 9
     settings:
       rows: 5
       placeholder: ''
@@ -473,20 +468,6 @@ content:
     third_party_settings: {  }
     type: metatag_firehose
     region: content
-  field_node_primary_site:
-    type: options_buttons
-    region: content
-    field_name: field_node_primary_site
-    weight: 18
-    settings: {  }
-    third_party_settings: {  }
-  field_node_site:
-    type: options_buttons
-    region: content
-    field_name: field_node_site
-    weight: 17
-    settings: {  }
-    third_party_settings: {  }
   field_related_links:
     type: paragraphs
     weight: 38
@@ -504,6 +485,13 @@ content:
         duplicate: duplicate
         collapse_edit_all: collapse_edit_all
     third_party_settings: {  }
+    region: content
+  field_show_ack_of_country:
+    weight: 40
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
     region: content
   field_show_content_rating:
     type: boolean_checkbox
@@ -556,7 +544,7 @@ content:
       display_label: true
     third_party_settings: {  }
   field_tags:
-    weight: 14
+    weight: 13
     settings:
       match_operator: CONTAINS
       size: 60
@@ -565,7 +553,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_topic:
-    weight: 13
+    weight: 12
     settings:
       match_operator: CONTAINS
       size: 60
@@ -587,13 +575,13 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 12
+    weight: 11
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -601,7 +589,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 7
     region: content
     third_party_settings: {  }
   scheduled_archiving:
@@ -640,14 +628,14 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 11
+    weight: 10
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 6
+    weight: 4
     region: content
     third_party_settings: {  }
   title:
@@ -663,7 +651,7 @@ content:
         maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
@@ -671,7 +659,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 10
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
