--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -203,6 +203,7 @@ config_devel:
     - field.field.node.landing_page.field_landing_page_contact
     - field.field.node.landing_page.field_landing_page_show_contact
     - field.field.node.landing_page.field_landing_page_summary
+    - field.field.node.landing_page.field_landing_page_summary
     - field.field.node.landing_page.field_show_content_rating
     - field.field.paragraph.contact_us.field_paragraph_body
     - field.field.paragraph.contact_us.field_paragraph_email
@@ -236,6 +237,7 @@ config_devel:
     - field.storage.node.field_graphical_image
     - field.storage.node.field_bottom_graphical_image
     - field.storage.node.field_show_ack_of_country
+    - field.storage.node.field_show_c_primary_caption
     - field.storage.node.field_show_hero_image_caption
     - field.storage.paragraph.field_paragraph_accordion
     - field.storage.paragraph.field_paragraph_accordion_body
