Revert "[SDPA-2794] Moved block type config to tide_core."
This reverts commit 68d2ea50ef6c7ef5729e712203ce109e8c3c34ce.

--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -25,6 +25,10 @@ dependencies:
   - smart_trim:smart_trim
 config_devel:
   install:
+    - block_content.type.media_gallery
+    - core.entity_form_display.block_content.campaign.default
+    - core.entity_form_display.block_content.campaign_with_video.default
+    - core.entity_form_display.block_content.media_gallery.default
     - core.entity_form_display.node.landing_page.default
     - core.entity_form_display.paragraph.banner.default
     - core.entity_form_display.paragraph.basic_text.default
@@ -44,8 +48,11 @@ config_devel:
     - core.entity_form_display.paragraph.keydates.default
     - core.entity_form_display.paragraph.latest_events.default
     - core.entity_view_display.paragraph.latest_events.default
+    - core.entity_form_display.paragraph.media_gallery.default
     - core.entity_form_display.paragraph.hero_banner_with_cta.default
     - core.entity_form_display.paragraph.introduction_banner.default
+    - core.entity_view_display.block_content.media_gallery.default
+    - core.entity_view_display.block_content.campaign_with_video.default
     - core.entity_view_display.node.landing_page.card
     - core.entity_view_display.node.landing_page.default
     - core.entity_view_display.node.landing_page.featured_card
@@ -69,6 +76,7 @@ config_devel:
     - core.entity_view_display.paragraph.introduction_banner.default
     - core.entity_view_display.paragraph.keydates.default
     - core.entity_view_display.paragraph.key_journeys.default
+    - core.entity_view_display.paragraph.media_gallery.default
     - core.entity_form_display.paragraph.contact_us.default
     - core.entity_form_display.paragraph.news_listing.default
     - core.entity_form_display.paragraph.phone.default
@@ -77,6 +85,18 @@ config_devel:
     - core.entity_view_display.paragraph.news_listing.default
     - core.entity_view_display.paragraph.phone.default
     - core.entity_view_display.paragraph.social_link.default
+    - field.field.block_content.campaign.body
+    - field.field.block_content.campaign.field_block_cta
+    - field.field.block_content.campaign.field_block_image
+    - field.field.block_content.campaign.field_block_title
+    - field.field.block_content.campaign_with_video.body
+    - field.field.block_content.campaign_with_video.field_block_cta
+    - field.field.block_content.campaign_with_video.field_block_embedded_video
+    - field.field.block_content.campaign_with_video.field_block_title
+    - field.field.block_content.media_gallery.field_gallery_featured_image
+    - field.field.block_content.media_gallery.field_gallery_media
+    - field.field.block_content.media_gallery.field_tags
+    - field.field.block_content.media_gallery.field_topic
     - field.field.node.landing_page.field_landing_page_c_secondary
     - field.field.node.landing_page.field_featured_image
     - field.field.node.landing_page.field_graphical_image
@@ -165,6 +185,7 @@ config_devel:
     - field.field.paragraph.keydates.field_paragraph_title
     - field.field.paragraph.latest_events.field_paragraph_cta_card_event
     - field.field.paragraph.latest_events.field_paragraph_title
+    - field.field.paragraph.media_gallery.field_paragraph_media_gallery
     - field.field.paragraph.news_listing.field_paragraph_title
     - field.field.node.landing_page.field_landing_page_contact
     - field.field.node.landing_page.field_landing_page_show_contact
@@ -183,6 +204,13 @@ config_devel:
     - field.field.paragraph.phone.field_paragraph_phone_title
     - field.field.paragraph.social_link.field_paragraph_link
     - field.field.paragraph.social_link.field_paragraph_social_list
+    - field.storage.block_content.field_block_cta
+    - field.storage.block_content.field_block_image
+    - field.storage.block_content.field_block_title
+    - field.storage.block_content.field_gallery_featured_image
+    - field.storage.block_content.field_gallery_media
+    - field.storage.block_content.field_block_embedded_video
+    - field.storage.paragraph.field_paragraph_media_gallery
     - field.storage.node.field_landing_page_c_primary
     - field.storage.node.field_landing_page_component
     - field.storage.node.field_landing_page_contact
@@ -248,6 +276,7 @@ config_devel:
     - paragraphs.paragraphs_type.key_journeys
     - paragraphs.paragraphs_type.keydates
     - paragraphs.paragraphs_type.latest_events
+    - paragraphs.paragraphs_type.media_gallery
     - paragraphs.paragraphs_type.contact_us
     - paragraphs.paragraphs_type.phone
     - paragraphs.paragraphs_type.social_link
@@ -261,6 +290,8 @@ config_devel:
     - field.field.paragraph.embedded_webform.field_paragraph_title
     - field.field.paragraph.embedded_webform.field_paragraph_webform
     - jsonapi_extras.jsonapi_resource_config.node--landing_page
+    - jsonapi_extras.jsonapi_resource_config.block_content--campaign
+    - jsonapi_extras.jsonapi_resource_config.block_content--media_gallery
     - jsonapi_extras.jsonapi_resource_config.paragraph--banner
     - jsonapi_extras.jsonapi_resource_config.paragraph--call_to_action
     - jsonapi_extras.jsonapi_resource_config.paragraph--card_event
@@ -273,6 +304,7 @@ config_devel:
     - jsonapi_extras.jsonapi_resource_config.paragraph--introduction_banner
     - jsonapi_extras.jsonapi_resource_config.paragraph--key_journeys
     - jsonapi_extras.jsonapi_resource_config.paragraph--keydates
+    - jsonapi_extras.jsonapi_resource_config.paragraph--media_gallery
     - jsonapi_extras.jsonapi_resource_config.paragraph--social_link
     - paragraphs.paragraphs_type.embedded_webform
     - paragraphs.paragraphs_type.news_listing
