--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "GPL-2.0-or-later",
     "require": {
         "dpc-sdp/tide_core": "dev-feature/SDPA-2794_migrate_sdp-dpc_modules as 1.5.2",
-        "dpc-sdp/tide_event": "^1.2.5",
-        "dpc-sdp/tide_media": "^1.2.5"
+        "dpc-sdp/tide_event": "dev-feature/SDPA-2794_migrate_sdp-dpc_modules",
+        "dpc-sdp/tide_media": "dev-feature/SDPA-2794_migrate_sdp-dpc_modules as 1.5.0"
     },
     "suggest": {
         "dpc-sdp/tide_api:^1.2.6": "Allows to use Drupal in headless mode",
