--- a/config/install/field.field.node.landing_page.field_bottom_graphical_image.yml
+++ b/config/install/field.field.node.landing_page.field_bottom_graphical_image.yml
@@ -9,8 +9,8 @@ id: node.landing_page.field_bottom_graphical_image
 field_name: field_bottom_graphical_image
 entity_type: node
 bundle: landing_page
-label: 'Bottom Graphical Image'
-description: 'The bottom graphical image will not be displayed when a hero image is added.'
+label: 'Bottom graphical image'
+description: 'This can only be changed by administrators. The graphical image will not be displayed when a hero image is added.'
 required: false
 translatable: false
 default_value: {  }
