--- a/config/install/paragraphs.paragraphs_type.basic_text.yml
+++ b/config/install/paragraphs.paragraphs_type.basic_text.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: basic_text
-label: 'Basic Text'
+label: 'Basic text'
 icon_uuid: null
 description: 'A paragraph type with a WYSIWYG body.'
 behavior_plugins: {  }
