--- a/config/install/paragraphs.paragraphs_type.card_event_auto.yml
+++ b/config/install/paragraphs.paragraphs_type.card_event_auto.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: card_event_auto
-label: 'Card Event Automated'
+label: 'Card event automated'
 icon_uuid: null
 description: ''
 behavior_plugins: {  }
