--- a/config/install/field.field.node.landing_page.field_landing_page_bg_colour.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_bg_colour.yml
@@ -10,8 +10,8 @@ id: node.landing_page.field_landing_page_bg_colour
 field_name: field_landing_page_bg_colour
 entity_type: node
 bundle: landing_page
-label: 'Background Colour'
-description: ''
+label: 'Background colour'
+description: 'Most content pages should have the background colour set as white. For landing pages with navigation cards and tiles, set the background colour as grey.'
 required: true
 translatable: false
 default_value:
