--- a/config/install/field.field.node.landing_page.field_landing_page_contact.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_contact.yml
@@ -11,7 +11,7 @@ id: node.landing_page.field_landing_page_contact
 field_name: field_landing_page_contact
 entity_type: node
 bundle: landing_page
-label: 'Contact Us'
+label: 'Contact us'
 description: ''
 required: false
 translatable: false
