--- a/config/install/field.field.node.landing_page.field_landing_page_hero_logo.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_hero_logo.yml
@@ -10,8 +10,8 @@ id: node.landing_page.field_landing_page_hero_logo
 field_name: field_landing_page_hero_logo
 entity_type: node
 bundle: landing_page
-label: 'Hero Logo'
-description: ''
+label: 'Hero logo'
+description: 'A hero logo displays at the top of the page, just about the page title. Hero logos can only be used with admin approval.'
 required: false
 translatable: false
 default_value: {  }
