--- a/config/install/field.field.node.landing_page.field_landing_page_summary.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_summary.yml
@@ -9,7 +9,7 @@ field_name: field_landing_page_summary
 entity_type: node
 bundle: landing_page
 label: Summary
-description: ''
+description: 'This is the meta description that appears in Google search results. Recommended length <156 characters. Use keywords.'
 required: true
 translatable: false
 default_value: {  }
