--- a/config/install/field.field.node.landing_page.field_show_related_content.yml
+++ b/config/install/field.field.node.landing_page.field_show_related_content.yml
@@ -9,7 +9,7 @@ field_name: field_show_related_content
 entity_type: node
 bundle: landing_page
 label: 'Show Related Content?'
-description: 'Check this box if you want to show Related Content for this page.'
+description: 'Check this box to display related links on this page.'
 required: false
 translatable: false
 default_value:
