--- a/config/install/field.field.node.landing_page.field_topic.yml
+++ b/config/install/field.field.node.landing_page.field_topic.yml
@@ -10,7 +10,7 @@ field_name: field_topic
 entity_type: node
 bundle: landing_page
 label: Topic
-description: 'Use <em>Topic</em> field to categorise pages by Topic.'
+description: 'The Topic field is mandatory. Start typing a topic from <a href="https://www.vic.gov.au/create-new-content-page#mandatory-fields-landing-page" target="_blank">our list of topics</a>.'
 required: true
 translatable: true
 default_value: {  }
