--- a/config/install/field.field.node.landing_page.field_whats_next.yml
+++ b/config/install/field.field.node.landing_page.field_whats_next.yml
@@ -11,7 +11,7 @@ id: node.landing_page.field_whats_next
 field_name: field_whats_next
 entity_type: node
 bundle: landing_page
-label: 'What''s Next'
+label: 'What''s next'
 description: ''
 required: false
 translatable: false
