--- a/config/install/field.field.paragraph.social_link.field_paragraph_link.yml
+++ b/config/install/field.field.paragraph.social_link.field_paragraph_link.yml
@@ -11,7 +11,7 @@ field_name: field_paragraph_link
 entity_type: paragraph
 bundle: social_link
 label: Link
-description: ''
+description: 'The link text displays the name of your social media channel (e.g. @VicGovAu).'
 required: true
 translatable: true
 default_value: {  }
