--- a/config/install/paragraphs.paragraphs_type.card_carousel.yml
+++ b/config/install/paragraphs.paragraphs_type.card_carousel.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: card_carousel
-label: 'Card Carousel'
+label: 'Card carousel'
 icon_uuid: null
 description: 'Featured cards for news and upcoming events.'
 behavior_plugins: {  }
