--- a/config/install/paragraphs.paragraphs_type.card_promotion.yml
+++ b/config/install/paragraphs.paragraphs_type.card_promotion.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: card_promotion
-label: Promotion
+label: 'Card promotion'
 icon_uuid: null
 description: ''
 behavior_plugins: {  }
