--- a/config/install/paragraphs.paragraphs_type.complex_image.yml
+++ b/config/install/paragraphs.paragraphs_type.complex_image.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: complex_image
-label: 'Complex Image'
+label: 'Complex image'
 icon_uuid: null
 description: 'Provides images with source, caption, and data table.'
 behavior_plugins: {  }
