--- a/config/install/paragraphs.paragraphs_type.social_link.yml
+++ b/config/install/paragraphs.paragraphs_type.social_link.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: social_link
-label: 'Social Link'
+label: 'Social link'
 icon_uuid: null
 description: 'Paragraph type to allow users to select a social media type and add a link.'
 behavior_plugins: {  }
