[SDPA-3735] Added youtube to social media list.

--- a/config/install/field.storage.paragraph.field_paragraph_social_list.yml
+++ b/config/install/field.storage.paragraph.field_paragraph_social_list.yml
@@ -22,6 +22,9 @@ settings:
     -
       value: instagram
       label: Instagram
+    -
+      value: youtube_channel
+      label: Youtube channel
   allowed_values_function: ''
 module: options
 locked: false
